--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
-1.04 (Testing)
+1.05 
+Updated name lists
+Removed Male portraits (ongoing?)
+Added prescripted empire Dark Imperium(ongoing)
+Lore additions
+
+1.04
 Added Female/Futa only List
 
 Revamped Civics and Traits
