Forgot to fix this
oops

--- a/localisation/horse_stuff_l_english.yml
+++ b/localisation/horse_stuff_l_english.yml
@@ -42,8 +42,8 @@ leader_trait_alicorn_ruler_desc:0 "This ruler is an immortal Alicorn."
 leader_trait_changeling_queen:0 "Changeling Queen"
 leader_trait_changeling_queen_desc:0 "This ruler is seen as the mother and ruler of all Changelings, and she spreads love to all of her subjects. A Changeling Queen is skilled in all things involving deciet and espionage."
 
-leader_trait_dark_queen:0 "Dark Queen"
-leader_trait_dark_queen_desc:0 "This ruler is incredibly skilled in dark magic, and has extended their lifespan to an unending degree."
+leader_trait_dark_imperator:0 "Dark Imperator"
+leader_trait_dark_imperator_desc:0 "This ruler is incredibly skilled in dark magic, and has extended their lifespan to an unending degree."
 
 leader_trait_solar_goddess:0 "Solar Goddess"
 leader_trait_solar_goddess_desc:0 "This ruler is the physical embodiment of the Sun and is worshipped as a deity. They are considered to have complete control over the stars themselves and are loved by all."
