Some ferals, changed horse species class to Equestrian

--- a/localisation/horse_stuff_l_english.yml
+++ b/localisation/horse_stuff_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
 
 ### Species Stuff ###
-name_list_horse:1 "Horse"
-HRS:0 "Equine"
-HRS_desc:1 "Species Class has no effect on your Empire, but Equine-class Species may consider other Equines to be less alien than other Species Classes."
-HRS_plural:0 "Equines"
+name_list_horse:1 "Equestrian"
+HRS:0 "Equestrian"
+HRS_desc:1 "Species Class has no effect on your Empire, but Equestrian-class Species may consider other Equestrians to be less alien than other Species Classes."
+HRS_plural:0 "Equestrians"
 HRS_insult_01:0 "beast"
 HRS_insult_plural_01:0 "beasts"
 HRS_compliment_01:0 "alicorn"
@@ -19,6 +19,25 @@ HRS_sound_05:0 "neighing"
 HRS_organ:0 "stomach"
 HRS_mouth:0 "mouth"
 HRS_hand:0 "hoof"
+
+name_list_horse:1 "Equestrian"
+FER:0 "Feral Equestrians"
+FER_desc:1 "Species Class has no effect on your Empire, but Feral Equestrian-class Species may consider other Feral Equestrians to be less alien than other Species Classes."
+FER_plural:0 "Feral Equestrians"
+FER_insult_01:0 "beast"
+FER_insult_plural_01:0 "beasts"
+FER_compliment_01:0 "alicorn"
+FER_compliment_plural_01:0 "alicorns"
+FER_spawn:0 "foal"
+FER_spawn_plural:0 "foals"
+FER_sound_01:0 "neighing"
+FER_sound_02:0 "clopping"
+FER_sound_03:0 "yelling"
+FER_sound_04:0 "crying"
+FER_sound_05:0 "neighing"
+FER_organ:0 "stomach"
+FER_mouth:0 "mouth"
+FER_hand:0 "hoof"
 
 ### Civics ###
 civic_alicorn_leader:0 "Alicorn Ruler"
