--- a/localisation/horse_technology_l_english.yml
+++ b/localisation/horse_technology_l_english.yml
@@ -1,4 +1,4 @@
-tech_basic_magic_theory:0 "Basic Magic Theory"
+﻿tech_basic_magic_theory:0 "Basic Magic Theory"
 tech_basic_magic_theory_desc:0 "The undertsanding of Magic in its most Simple form makes way for new and exciting possibilities!."
 
 tech_combat_spells:0 "tech_combat_spells" 
