loc fixes and fixing the icon for buggovores

--- a/localisation/horse_modifiers_l_english.yml
+++ b/localisation/horse_modifiers_l_english.yml
@@ -3,3 +3,5 @@
 cloud_builders_cloud_cities:0 "Cloud Cities"
 
 planet_pony_parties:0 "Constant Pony Festivals"
+
+d_alchemical_refinery:0 "Alchemical Refinery"
