nothing happened I promis

--- a/localisation/horse_stuff_l_english.yml
+++ b/localisation/horse_stuff_l_english.yml
@@ -98,3 +98,4 @@
  RT_SUN_EMPRESS:0 "Sun Empress"
  HT_CROWN_VISIER:0 "Crown Visier"
  gov_solar_cult:0 "Solar Cult"
+ gov_solar_cult_desc:0 "Solar Cult Description"
