--- a/localisation/horse_traits_l_english.yml
+++ b/localisation/horse_traits_l_english.yml
@@ -10,16 +10,16 @@
  trait_magically_gifted_desc:0 ""
 
  trait_pony_power:0 "Pony Power"
- trait_pony_power_desc:0 ""
+ trait_pony_power_desc:0 "This species has all three essential pony traits, the ability of flight and cloud manipulation, attunement and understanding of the earth, and incredible magical prowess."
 
  trait_party_ponies:0 "Party Ponies"
- trait_party_ponies_desc:0 ""
+ trait_party_ponies_desc:0 "This species is well known for their frequent and spontaneous parties. It's hard to go a week without a party being thrown for some event or occasion!"
 
  trait_greedy:0 "Greedy"
  trait_greedy_desc:0 ""
 
  trait_emotionovores:0 "Emotionovores"
- trait_emotionovores_desc:0 ""
+ trait_emotionovores_desc:0 "This species feeds on the emotions of others and has the ability to drain pops of their life, as well as converting them to their species."
 
  trait_territorial:0 "Territorial"
  trait_territorial_desc:0 ""
