--- a/localisation/horse_building_and_job_l_english.yml
+++ b/localisation/horse_building_and_job_l_english.yml
@@ -6,8 +6,22 @@ job_cloud_clerk_plural:0 "Cloud Clerk"
 job_cloud_clerk_desc:0 ""
 
 
+job_magic_crystal_miner_effect_desc:0 ""
+job_magic_crystal_miner_drone_effect_desc:0 ""
+
+job_magic_crystal_miner:0 "Magic Crystal Miner"
+job_magic_crystal_miner_plural:0 "Magic Crystal Miners"
+job_magic_crystal_miner_desc:2 "Miners specialized in extracting Magic Crystals"
+job_magic_crystal_miner_effect_desc:1 "Magic Crystal Miners extract two units of §YMagic Crystals§! at the cost of £energy"
+mod_job_magic_crystal_miner_add:0 "$job_magic_crystal_miner$ Jobs"
+mod_job_magic_crystal_miner_per_pop:0 "§G+1§! $job_magic_crystal_miner$ Job per $VALUE$ Pops"
+mod_job_magic_crystal_miner_per_pop_short:0 "\n§G+1§! £job_magic_crystal_miner£ per $VALUE$ £pop£"
+
 ### Deposits ###
 d_cloud_city:0 "Cloud City"
 d_cloud_city_desc:0 ""
 
 ### Buildings ###
+
+building_magic_crystal_plant:0 "Magic Crystal Mine"
+building_magic_crystal_plant_desc:0 "A mine dedicated soley to extracting Magic Crystals from the ground."
