--- a/localisation/horse_decisions_l_english.yml
+++ b/localisation/horse_decisions_l_english.yml
@@ -3,15 +3,22 @@
 decision_search_for_deposits_horse:0 "Search for Deposits"
 decision_search_for_deposits_horse_desc:0 ""
 
-decision_cloud_cities:0 "Build Cloud Cities"
-decision_cloud_cities_desc:0 ""
-
 decision_advanced_alchemical_refinement:0 "Advanced Alchemical Refinement"
 decision_advanced_alchemical_refinement_desc:0 ""
 
 decision_pony_parties:0 "Constant Pony Festivals" 
 decision_pony_parties_desc:0 ""
 
+### Cloud Stuff
+decision_cloud_cities:0 "Build Cloud Cities"
+decision_cloud_cities_desc:0 ""
 
+decision_cloud_solar_farms:0 "Build Cloud Solar Farms"
+decision_cloud_solar_farms_desc:0 ""
+
+decision_cloud_farms:0 "Build Cloud Agricultural Center"
+decision_cloud_farms_desc:0 ""
+
+### Rituals
 decision_productivity_ritual:0 "Productivity Ritual" 
 decision_productivity_ritual_desc:0 "The Ritual of Productivity has been performed on this world, making it's inhabitants more willing to work harder and longer."
