Wow that's a lotta shit.

--- a/localisation/horse_building_and_job_l_english.yml
+++ b/localisation/horse_building_and_job_l_english.yml
@@ -9,7 +9,7 @@ job_cloud_clerk_desc:0 ""
 job_magic_crystal_miner:0 "Magic Crystal Miner"
 job_magic_crystal_miner_plural:0 "Magic Crystal Miners"
 job_magic_crystal_miner_desc:2 "Miners specialized in extracting Magic Crystals"
-job_magic_crystal_miner_effect_desc:1 "Magic Crystal Miners extract two units of §YMagic Crystals§! at the cost of £energy"
+job_magic_crystal_miner_effect_desc:1 "Magic Crystal Miners extract two units of §YMagic Crystals§! at the cost of £energy\n"
 mod_job_magic_crystal_miner_add:0 "$job_magic_crystal_miner$ Jobs"
 mod_job_magic_crystal_miner_per_pop:0 "§G+1§! $job_magic_crystal_miner$ Job per $VALUE$ Pops"
 mod_job_magic_crystal_miner_per_pop_short:0 "\n§G+1§! £job_magic_crystal_miner£ per $VALUE$ £pop£"
@@ -17,7 +17,7 @@ mod_job_magic_crystal_miner_per_pop_short:0 "\n§G+1§! £job_magic_crystal_mine
 job_enchanter:0 "Enchanter"
 job_enchanter_plural:0 "Enchanters"
 job_enchanter_desc:2 "Enchanters apply enchantments to tools and items used by workers and specilaist"
-job_enchanter_effect_desc:1 "Enchanters improve the resource output of a planet by §Y5%§!"
+job_enchanter_effect_desc:1 "Enchanters improve the resource output of a planet by §Y10%§!\n"
 mod_job_enchanter_add:0 "$job_enchanter$ Jobs"
 mod_job_enchanter_per_pop:0 "§G+1§! $job_enchanter$ Job per $VALUE$ Pops"
 mod_job_enchanter_per_pop_short:0 "\n§G+1§! job_enchanter per $VALUE$ £pop£"
@@ -25,7 +25,7 @@ mod_job_enchanter_per_pop_short:0 "\n§G+1§! job_enchanter per $VALUE$ £pop£"
 job_thaumaturgic_researcher:0 "Thaumaturgic Researcher"
 job_thaumaturgic_researcher_plural:0 "Thaumaturgic Researchers"
 job_thaumaturgic_researcher_desc:2 "Thaumaturgic Researchers help with research and development of new technologies by providing magical assistance and testing."
-job_thaumaturgic_researcher_effect_desc:1 "Thaumaturgic Researchers increases the planets research output by§Y5%§!"
+job_thaumaturgic_researcher_effect_desc:1 "Thaumaturgic Researchers increases the planets research output by§Y5%§!\n"
 mod_job_thaumaturgic_researcher_add:0 "$job_thaumaturgic_researcher$ Jobs"
 mod_job_thaumaturgic_researcher_per_pop:0 "§G+1§! $job_thaumaturgic_researcher$ Job per $VALUE$ Pops"
 mod_job_thaumaturgic_researcher_per_pop_short:0 "\n§G+1§! job_thaumaturgic_researcher per $VALUE$ £pop£"
@@ -33,7 +33,7 @@ mod_job_thaumaturgic_researcher_per_pop_short:0 "\n§G+1§! job_thaumaturgic_res
 job_thaumaturgic_refiners:0 "Thaumaturgic Refiner"
 job_thaumaturgic_refiners_plural:0 "Thaumaturgic Refiners"
 job_thaumaturgic_refiners_desc:2 "Thaumaturgic Refiners assist with the refining process of minerals, allowing for much more larger quantaties of minerals to be extracted from the planet."
-job_thaumaturgic_refiners_effect_desc:1 "Thaumaturgic Refiners improve the planet's mineral output by §Y5%§!"
+job_thaumaturgic_refiners_effect_desc:1 "Thaumaturgic Refiners improve the planet's mineral output by §Y5%§!\n"
 mod_job_thaumaturgic_refiners_add:0 "$job_thaumaturgic_refiners$ Jobs"
 mod_job_thaumaturgic_refiners_per_pop:0 "§G+1§! $job_thaumaturgic_refiners$ Job per $VALUE$ Pops"
 mod_job_thaumaturgic_refiners_per_pop_short:0 "\n§G+1§! job_thaumaturgic_refiners per $VALUE$ £pop£"
@@ -41,7 +41,7 @@ mod_job_thaumaturgic_refiners_per_pop_short:0 "\n§G+1§! job_thaumaturgic_refin
 job_thaumaturgic_electricians:0 "Thaumaturgic Electrician"
 job_thaumaturgic_electricians_plural:0 "Thaumaturgic Electricians"
 job_thaumaturgic_electricians_desc:2 "Thaumaturgic Electricians help with improving and maintaining the energy grid of a planet."
-job_thaumaturgic_electricians_effect_desc:1 "Thaumaturgic Electricians improve the energy output of a planet by §Y5%§!"
+job_thaumaturgic_electricians_effect_desc:1 "Thaumaturgic Electricians improve the energy output of a planet by §Y5%§!\n"
 mod_job_thaumaturgic_electricians_add:0 "$job_thaumaturgic_refiners$ Jobs"
 mod_job_thaumaturgic_electricians_per_pop:0 "§G+1§! $job_thaumaturgic_refiners$ Job per $VALUE$ Pops"
 mod_job_thaumaturgic_electricians_per_pop_short:0 "\n§G+1§! job_thaumaturgic_refiners per $VALUE$ £pop£"
@@ -49,7 +49,7 @@ mod_job_thaumaturgic_electricians_per_pop_short:0 "\n§G+1§! job_thaumaturgic_r
 job_alchemical_foundry_workers:0 "Alchemical Foundry Worker"
 job_alchemical_foundry_workers_plural:0 "Alchemical Foundry Workers"
 job_alchemical_foundry_workers_desc:2 "Alchemical Foundry Workers work in specialized foundries that produce Alloys using magical techniques"
-job_alchemical_foundry_workers_effect_desc:1 "Alchemical Foundry Workers improve the alloy output of a planet by §Y5%§!"
+job_alchemical_foundry_workers_effect_desc:1 "Alchemical Foundry Workers improve the alloy output of a planet by §Y5%§!\n"
 mod_job_alchemical_foundry_workers_add:0 "$job_thaumaturgic_refiners$ Jobs"
 mod_job_alchemical_foundry_workers_per_pop:0 "§G+1§! $job_thaumaturgic_refiners$ Job per $VALUE$ Pops"
 mod_job_alchemical_foundry_workers_per_pop_short:0 "\n§G+1§! job_thaumaturgic_refiners per $VALUE$ £pop£"
@@ -63,6 +63,9 @@ d_cloud_solar_farms_desc:0 ""
 
 d_cloud_agri_center:0 "Cloud Agricultural Centers"
 d_cloud_agri_center_desc:0 ""
+
+d_magic_crystal_caverns:0 "Magic Crystal Caverns"
+d_magic_crystal_caverns_desc:0 "Magic Crystals pour out of every crevice and wall in these wonderful crystalline caverns."
 
 ### Buildings ###
 
